--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Sibu Raj, portfolio, Sibu, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="keywords" content="Rajesh Kumar, portfolio, Sibu, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
     <meta name="description" content="Welcome to Sibu's Portfolio. Full-Stack Web Developer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
     <link id='favicon' rel="shortcut icon" href="./assets/images/hero.jpeg" type="image/x-png">
-    <title>Portfolio | Sibu raj</title>
+    <title>Portfolio | Rajesh Kumar</title>
 </head>
 <body oncontextmenu="return false">
 
 <!-- navbar starts -->
 <header>
   <img draggable="false" class="tilt" src="./assets/images/signature.png" height="60" alt="">
-        <!-- <a href="/" class="logo"><i class=""></i> Sibu Raj</a> -->
+        <!-- <a href="/" class="logo"><i class=""></i> Rajesh Kumar</a> -->
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -42,7 +42,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi There,<br/> I'm Sibu <span>Raj</span></h2>
+    <h2>Hi There,<br/> I'm Rajesh Kumar<span>Raj</span></h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
@@ -74,7 +74,7 @@
         <img draggable="false" class="tilt" src="./assets/images/profile2.jpeg" alt="">
     </div>
     <div class="content">
-        <h3>I'm Sibu Raj</h3>
+        <h3>I'm Rajesh Kumar</h3>
         <span class="tag">Full Stack Developer</span>
         
         <p>I am a Computer Engineering student with good problem-solving
@@ -261,7 +261,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable">Mr Sibu Raj</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable">Mr Rajesh Kumar</a></h1>
 
 </section>
 <!-- footer section ends -->
