--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <p><span> phone : </span> +91 XXX-XXX-XXXX</p>
             </div> -->
             <div class="box">
-              <p><span> email : </span> Siburaj7@gmail.com</p>
+              <p><span> email : </span> Rajeshkumar@gmail.com</p>
               <p><span> place : </span> Dehradun, India - 248001</p>
             </div>
         </div>
@@ -147,7 +147,7 @@
         <div class="content">
         <h3>Graphic Era (Deemed to be University)</h3>
         <p>It was established in the year 1996 and offers undergraduate and postgraduate degrees in various disciplines. GEHU is affiliated to AIU and Accreditation Of UGC, NAAC, MHRD, AICTE.</p>
-        <h4>2022-2024 | Pursuing</h4>
+        <h4>2022-2024 | Completed</h4>
         </div>
     </div>
 
@@ -156,8 +156,8 @@
       <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
       </div>
       <div class="content">
-      <h3> Satyendra Narayan Sinha College</h3>
-      <p> It is affiliated to Magadh University, and offers undergraduate courses in science</p>
+      <h3> BRABU UNIVERSITY</h3>
+      <p> It is affiliated to BRABU UNIVERSIT, and offers undergraduate courses in science</p>
       <h4>2017-2020 | Completed</h4>
       </div>
     </div>
@@ -167,23 +167,7 @@
 <!-- education section ends -->
 
 
-<!-- work project section starts -->
-<section class="work" id="work">
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span></span></h2>
-
-  <div class="box-container">
-</div>
-
-<div class="viewall">
-  <a href="/projects" class="btn"><span>View All</span>
-    <i class="fas fa-arrow-right"></i>
-</a>
-</div>
-
-</section>
-<!-- work project section ends -->
-    
 <!-- contact section starts -->
 <section class="contact" id="contact">
   
