--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Rajesh Kumar, portfolio, Sibu, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
-    <meta name="description" content="Welcome to Sibu's Portfolio. Full-Stack Web Developer" />
+    <meta name="keywords" content="Rajesh Kumar, portfolio, Rajesh , full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="description" content="Welcome to Rajesh 's Portfolio. Full-Stack Web Developer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Font Awesome -->
@@ -49,11 +49,11 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/mrsiburaj" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/Mrsiburaj" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/mrRajesh raj" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+          <li><a class="github" aria-label="GitHub" href="https://github.com/MrRajesh raj" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="twitter" aria-label="Twitter" href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/mrsiburaj" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/imsiburaj"><i class="fab fa-instagram" target="_blank"></i></a></li>
+          <li><a class="telegram" aria-label="Telegram" href="https://t.me/mrRajesh raj" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/imRajesh raj"><i class="fab fa-instagram" target="_blank"></i></a></li>
           
         </ul>
       </div>
@@ -215,7 +215,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Sibu's Portfolio</h3>
+          <h3>Rajesh 's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/></p>
       </div>
 
@@ -232,15 +232,15 @@
       <div class="box">
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>+91 XXX-XXX-XXXX</p>
-          <p> <i class="fas fa-envelope"></i>Siburaj7@gmail.com</p>
+          <p> <i class="fas fa-envelope"></i>Rajesh raj7@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Dehradun, India-248001</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/mrsiburaj" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/Mrsiburaj" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:siburaj7@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/mrRajesh raj" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://github.com/MrRajesh raj" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="mailto:Rajesh raj7@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
               <a href="" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/Mrsiburaj" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://t.me/MrRajesh raj" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
           </div>
       </div>
   </div>
