--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <div class="box">
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>+91 XXX-XXX-XXXX</p>
-          <p> <i class="fas fa-envelope"></i>Rajesh raj7@gmail.com</p>
+          <p> <i class="fas fa-envelope"></i>Rajeshkumar@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Dehradun, India-248001</p>
           <div class="share">
 
