--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <img draggable="false" class="tilt" src="./assets/images/signature.png" height="60" alt="">
         <!-- <a href="/" class="logo"><i class=""></i> Rajesh Kumar</a> -->
 
-        <div id="menu" class="fas fa-bars"></div>
+        <div id="menu" class="fas fa-ba"></div>
         <nav class="navbar">
             <ul>
             <li><a class="active" href="#home">Home</a></li>
